--- a/my-angular-course/my-angular-albums/src/app/app.component.html
+++ b/my-angular-course/my-angular-albums/src/app/app.component.html
@@ -3,49 +3,8 @@
     Welcome to {{ title }}!
   </h1>
   <h2>{{ subtitle }}</h2>
-  <p>Album Title #{{titleCounter}}</p>
-
-  <div class="container-fluid">
-    <div class="card-deck">
-      <div class="card"><img
-        class="card-img-top cover"
-        src="assets/img/{{ albumsArray[0].id }}.jpg"
-        alt="Album Cover for Dust"
-        style="border: 1px solid grey"
-      />
-      <div class="card-body">
-        <h5 class="card-title">{{ albumsArray[0].artist }}</h5>
-          <h6 class="card-title">{{ albumsArray[0].albumName }}</h6>
-          <h6 class="card-text">Released: {{ albumsArray[0].releaseDate }}</h6>
-          <h6>{{ albumsArray[0].price }} {{ albumsArray[0].currency }}</h6>
-      </div>
-    </div>
-      <div class="card"><img
-        class="card-img-top cover"
-        src="assets/img/{{ albumsArray[1].id }}.jpg"
-        alt="Album Cover for 7800 Fahrerenheit"
-        style="border: 1px solid grey"
-      />
-      <div class="card-body">
-        <h5 class="card-title">{{ albumsArray[1].artist }}</h5>
-          <h6 class="card-title">{{ albumsArray[1].albumName }}</h6>
-          <h6 class="card-text">Released: {{ albumsArray[1].releaseDate }}</h6>
-          <h6>{{ albumsArray[1].price }} {{ albumsArray[1].currency }}</h6>
-      </div>
-    </div>
-      <div class="card"><img
-        class="card-img-top cover"
-        src="assets/img/{{ albumsArray[2].id }}.jpg"
-        alt="Album Cover for The White Album"
-        style="border: 1px solid grey"
-      />
-      <div class="card-body">
-        <h5 class="card-title">{{ albumsArray[2].artist }}</h5>
-          <h6 class="card-title">{{ albumsArray[2].albumName }}</h6>
-          <h6 class="card-text">Released: {{ albumsArray[2].releaseDate }}</h6>
-          <h6>{{ albumsArray[2].price }} {{ albumsArray[2].currency }}</h6>
-      </div>
-    </div>
-    </div>
   </div>
-</div>
+  
+<app-album-list></app-album-list>
+
+<router-outlet></router-outlet>
